@@ -13,18 +13,21 @@ __BEGIN_DECLS
 
 /*! \brief Gilbert-Johnson-Keerthi algorithm.
  *
- * zGJK() finds a pair of the closest points of convex hulls
- * of two sets of points \a p1 and \a p2. \a n1 and \a n2 are
- * the numbers of points of \a p1 and \a p2, respectively. The
- * pair of points found are stored in \a c1 and \a c2.
- *
- * zGJKPL() also finds a pair of the closest points of convex
- * hulls of two lists of points \a pl1 and \a pl2.
- *
- * \return zGJKPL() and zGJK() return the distance between the
- * closest points. If the convex hulls intersect, zero is returned
- * as the distance, and the center of intersection is put into
+ * zGJK() finds a pair of the closest points of convex hulls of two sets
+ * of points \a p1 and \a p2. \a n1 and \a n2 are the numbers of points of
+ * \a p1 and \a p2, respectively. The pair of points found are stored in
  * \a c1 and \a c2.
+ *
+ * zGJKPL() also finds a pair of the closest points of convex hulls of
+ * two lists of points \a pl1 and \a pl2.
+ *
+ * \return
+ * zGJKPL() and zGJK() return the distance between the closest points.
+ * If the convex hulls intersect, zero is returned as the distance, and
+ * the center of intersection is put into \a c1 and \a c2.
+ * \note
+ * zGJK() does not work correctly when the given points have very large
+ * component values such as 1.0e10, and zGJKPL() likewise.
  */
 __EXPORT bool zGJK(zVec3D p1[], int n1, zVec3D p2[], int n2, zVec3D *c1, zVec3D *c2);
 __EXPORT bool zGJKDepth(zVec3D p1[], int n1, zVec3D p2[], int n2, zVec3D *c1, zVec3D *c2);
